--- a/wp-content/themes/skilled-child/css/responsive.css
+++ b/wp-content/themes/skilled-child/css/responsive.css
@@ -128,7 +128,8 @@ video.video-js,
 }
 
 .add-session button{
-    width: 93%;
+    width: auto;
+    margin: 0 0.5em 0 0; width: 93%;
 }
 
 .date-time button{
