--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -36,6 +36,10 @@ a{cursor: pointer;}
 	width: 5%;
 }
 
+.wh-footer{
+	position:absolute;
+	bottom:0;
+}
 
 input[type="button"].cancel-btn{
 	background:#40535e ;
