--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -493,7 +493,7 @@ div.dataTables_wrapper div.dataTables_filter input,
 }
 
 .tutor-registration .form-inline .choose-file .uploaded-files{
-	border: 1px solid #ccc;
+	/*border: 1px solid #ccc;*/
     padding: 0.5em;
     margin: 0.5em;
     display: inline-block;
