--- a/wp-content/themes/skilled-child/style.css
+++ b/wp-content/themes/skilled-child/style.css
@@ -1202,6 +1202,7 @@ nav.woocommerce-MyAccount-navigation ul li.is-active{
 
 .one-on-tutoring .one-on-form .form-inline label {
     width: 32%;
+
 }
 
 .myaccount_view .box-heading span.viewall-link a,
@@ -2071,7 +2072,7 @@ min-height:267px;
 }
 
 .slick-track .slick-slide p{
-    background:#fff;
+
 }
 
  .slick-track .slick-slide a{
@@ -2191,7 +2192,7 @@ li.single-tutor a img{
 
 
 .search-results .single-result{
-	width:40%;
+	width:32%;
 }
 
 /* carousel */
@@ -2227,3 +2228,26 @@ li.single-tutor a img{
 background: #428bca;
 }
 
+.carousel-control.left,
+.carousel-control.right{
+	background: transparent;
+ border: 0;
+    font-size: 120px;
+
+}
+
+.carousel .carousel-inner a.thumbnail{
+ 	height: 270px;
+       padding: 0;
+    text-align: center;
+    font-size: 20px;
+}
+
+.carousel .carousel-inner a.thumbnail img.alignnone{
+     min-height: 150px;
+     height: 210px;
+     margin:0 auto;
+}
+
+.searchcourses_result .wh-content-inner{
+	width:97%;}
